# STL-Distance

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
data/: 22.stl  3.stl  Ball.stl  Body.stl  Cil_Tube_Cil_3.stl  Cil_Tube_Cil_5.stl  CubeBoth.stl  CubeLeft.stl  CubeRight.stl  Curve.stl  EL_Tube_EL_1.stl  EL_Tube_EL_2.stl  Gun.stl  Sapog1.stl  Sapog2.stl  V1.stl  V2.stl  fan1.stl  fan1_copy.stl  fan2.stl  fan2_copy.stl  pipe.stl  rod.stl
git/: .gitignore  .gitmodules
src/: AABBTree.cpp  AABBTree.hpp  AltMDM.cpp  AltMDM.hpp  Distance.cpp  Distance.hpp  GJK.cpp  GJK.hpp  KDTree.cpp  KDTree.hpp  MathOperations.cpp  MathOperations.hpp  Matrix.hpp  MiddlePoint.cpp  MiddlePoint.hpp  ReadSTL.cpp  ReadSTL.hpp  Triangle.cpp  Triangle.hpp  Vector.cpp  Vector.hpp
tests/: testKDTree.cpp  testMathOperations.cpp  testMatrix.cpp  testReadSTL.cpp  testTriangle.cpp  testVector.cpp
